k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kids-media-service
  labels:
    app: kids-media
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: kids-media
